# c23pp

./: .gitignore  CMakeLists.txt  README.md
include/c23pp/lex/: internal.h  lex.h  tokens.h
include/c23pp/lex/tokens/: block-comment.h  eof.h  hash.h  if-group.h  invalid.h  line-comment.h  newline.h  whitespace.h
src/: main.c
src/c23pp/lex/: internal.c  lex.c
src/c23pp/lex/tokens/: block-comment.c  eof.c  hash.c  if-group.c  invalid.c  line-comment.c  newline.c  whitespace.c
